--- a/apps/docs/app/globals.css
+++ b/apps/docs/app/globals.css
@@ -34,6 +34,13 @@ h2 {
   margin: var(--spacing-large) 0 var(--spacing-small);
 }
 
+h3 {
+  font-size: var(--font-title3);
+  color: var(--color-content-primary);
+  margin-top: var(--spacing-large);
+  margin: var(--spacing-large) 0 var(--spacing-miniPlus);
+}
+
 p {
   font-size: var(--font-regular);
   color: var(--color-content-secondary);
