feat(index.css): add font weight and line height atomic tokens

--- a/packages/ui/src/index.css
+++ b/packages/ui/src/index.css
@@ -89,19 +89,13 @@
   --text-title2: 1.5rem;
   --text-title3: 1.25rem;
 
-  --font-weight-micro: 400;
-  --font-weight-microPlus: 400;
-  --font-weight-mini: 400;
-  --font-weight-miniPlus: 400;
-  --font-weight-small: 400;
-  --font-weight-smallPlus: 400;
-  --font-weight-regular: 400;
-  --font-weight-regularPlus: 400;
-  --font-weight-large: 600;
-  --font-weight-largePlus: 600;
-  --font-weight-title1: 700;
-  --font-weight-title2: 700;
-  --font-weight-title3: 600;
+  --font-regular: 400;
+  --font-semibold: 600;
+  --font-bold: 700;
+
+  --leading-tight: 1.3;
+  --leading-normal: 1.5;
+  --leading-relaxed: 1.7;
 
   --duration-highlightFadeIn: 0s;
   --duration-highlightFadeOut: 0.15s;
